gcc/testsuite/gcc.target/powerpc/dfp/dtstsfi-36.c
/* { dg-do compile } */
/* { dg-require-effective-target powerpc_vsx_ok } */
/* { dg-options "-mdejagnu-cpu=power8 -mvsx" } */

#include <altivec.h>

int doTestBCDSignificance (_Decimal128 *p)
{
  _Decimal128 source = *p;

  return __builtin_dfp_dtstsfi_gt_td (5, source);	/* { dg-error "'__builtin_dtstsfi_gt_td' requires" } */
}


